--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ button:hover {
         <h2>Gallery</h2>
         <div class="gallery-container">
             <div class="gallery-item">
-                <img src="images/HTR1.JPG" alt="UAV Photo 1">
+                <img src="images/HTR.JPG" alt="UAV Photo 1">
                 <p>Drone in Action</p>
             </div>
             <div class="gallery-item">
