--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ button:hover {
             </div>
             <div class="gallery-item">
                 <video controls>
-                    <source src="https://www.dropbox.com/scl/fi/cs0c19wvrfv2rs3npg1jl/Video-Sep-08-2024-5-16-52-PM-1.mov?rlkey=frzvrdegxj49x2otwzo9tvkc9&dl=0" type="video/mp4">
+                    <source src="videos/FullSizeRender.MOV" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <p>Flight Demonstration</p>
