--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@ nav ul li a {
     text-decoration: none;
 }
 
-h1, h2 {
+h2 {
     color: #333;
+}
+    
+h1 {
+    color: #fff;
 }
 
 section {
@@ -107,7 +111,7 @@ button:hover {
 
     <section id="purpose">
         <h2>ရည်မှန်းချက်နှင့် ရည်ရွယ်ချက်</h2>
-        <p>"ငါတို့၏ ရည်မှန်းချက်မှာ ခေတ်မီဒရုန်းနည်းပညာများ အသုံးပြုခြင်းဖြင့် ငါတို့၏ ဇာတိမြေကို ကာကွယ်စောင့်ရှောက်ရန်နှင့် ငါတို့၏ပြည်သူများ၏ လုံခြုံရေး၊ သာယာဝပြောရေးနှင့် ကျန်းမာချမ်းသာရေးကို အာမခံပါသည်။"</p>
+        <p>"ကျွန်တော်တို့၏ ရည်မှန်းချက်မှာ ခေတ်မီဒရုန်းနည်းပညာများ အသုံးပြုခြင်းဖြင့် ငါတို့၏ ဇာတိမြေကို ကာကွယ်စောင့်ရှောက်ရန်နှင့် ငါတို့၏ပြည်သူများ၏ လုံခြုံရေး၊ စည်းစိမ်ဥစ္စာနှင့် ကျန်းမာချမ်းသာရေးကို အာမခံပါသည်။"</p>
     </section>
 <section id="Cooperation">
         <h2>စည်းလုံးညီညွတ်မှုနှင့် ပူးပေါင်းဆောင်ရွက်မှု</h2>
