--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@ body {
     color: #333;
     line-height: 1.6;
 }
-
 header {
-    background-color: #333;
+    background-image: url('../images/PNLA-UAV.jpg');
+    background-size: cover;
+    background-position: center;
     color: white;
     text-align: center;
-    padding: 1rem 0;
+    padding: 100px 0; /* Adjust to make space for content */
+}
+
+header h1 {
+    font-size: 2.5rem;
+    margin: 0;
 }
 
 nav ul {
