--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
     line-height: 1.6;
 }
 header {
-    background-image: url('../images/PNLA-UAV.jpg');
+    background-image: url('images/PNLA-UAV.jpg');
     background-size: cover;
     background-position: center;
     color: white;
