--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@ body {
 header {
     background-image: url('images/PNLA-UAV.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: center center; /* Center horizontally and vertically */
+    background-repeat: no-repeat; /* Ensure image does not repeat */
+    background-attachment: fixed; /* Keeps the image fixed in the background while scrolling */
+    height: 100vh; /* Set header height to full screen */
     color: white;
     text-align: center;
-    padding: 100px 0; /* Adjust to make space for content */
+    padding: 100px 0; /* Adjust as needed for content */
 }
-
 header h1 {
     font-size: 2.5rem;
     margin: 0;
