--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@ button:hover {
     </section>
 
     <section id="purpose">
-        <h2>ရည်မှန်းချက်နှင့် ရည်ရွယ်ချက်</h2>
-        <p>"ကျွန်တော်တို့၏ ရည်မှန်းချက်မှာ ခေတ်မီဒရုန်းနည်းပညာများ အသုံးပြုခြင်းဖြင့် ငါတို့၏ ဇာတိမြေကို ကာကွယ်စောင့်ရှောက်ရန်နှင့် ငါတို့၏ပြည်သူများ၏ လုံခြုံရေး၊ စည်းစိမ်ဥစ္စာနှင့် ကျန်းမာချမ်းသာရေးကို အာမခံပါသည်။"</p>
+        <h2>Mission and Purpose</h2>
+        <p>"Our mission is to safeguard and advance our homeland through the use of modern drone technologies, ensuring the security, prosperity, and well-being of our people."</p>
     </section>
 <section id="Cooperation">
         <h2>စည်းလုံးညီညွတ်မှုနှင့် ပူးပေါင်းဆောင်ရွက်မှု</h2>
@@ -131,7 +131,7 @@ button:hover {
         <h2>Gallery</h2>
         <div class="gallery-container">
             <div class="gallery-item">
-                <img src="images/HTR.JPG" alt="UAV Photo 1">
+                <img src="images/58E3F307-704B-4A5C-BC83-63E05AA9A38C.jpeg" alt="UAV Photo 1">
                 <p>Drone in Action</p>
             </div>
             <div class="gallery-item">
